# DNG

./: LICENSE  README.md  dng_models.py  environment.yml  pyproject.toml  siren_utils.py
data/: __init__.py  datasets.py  generate_graph_data.py  generate_vit.py  graph_utils.py  park_dataset.py
experiments/generalization/: predict_cnn.py  predict_park.py  predict_vit.py
experiments/inr_classification/: classify_encoder.py  classify_latent.py  train_inr2inr.py  train_inr2jls.py
experiments/inr_editing/: stylize_siren.py
ng/: predict_gen_vit.py  test_vit_utils.py  vit_utils.py
tests/: conftest.py  test_dng_data_utils.py  test_dng_models.py
